@@ -65,7 +65,7 @@ export class Foo{
 > ./mill foo.checkFormatAll # run lint with prettier configuration.
 Checking formatting...
 [warn] foo/src/foo.ts
-[warn] Code style issues found. Run foo.reformatAll to fix.
+[warn] Code style issues found...
 
 > ./mill foo.reformatAll
 ...
